fixed a bug causing firing and gadget bools to get stuck when losing focus on the screen attached particle beam art to game weapon titles now appear in ship build menu fixed a bug with photon cannon not resetting charge clientside

--- a/client/styles.css
+++ b/client/styles.css
@@ -141,7 +141,8 @@ canvas{
 #weaponTitle{
 	margin-top: -3vw;
 }
-#weaponTitle *{
+#weaponTitle p{
+	font-weight: bold;
 	margin-top: 0 !important;
 	margin-bottom: 0 !important;
 }
@@ -156,7 +157,8 @@ canvas{
 #gadgetTitle{
 	margin-top: -3vw;
 }
-#gadgetTitle *{
+#gadgetTitle p{
+	font-weight: bold;
 	margin-top: 0 !important;
 	margin-bottom: 0 !important;
 }
